implement admin face login endpoint